--- a/nestingtestmockup.css
+++ b/nestingtestmockup.css
@@ -1,4 +1,4 @@
-.outer_div {
+.comment-list {
     background-color: #66CCFF;
     max-height:500px;
     max-width:500px;
@@ -9,7 +9,7 @@
 
 }
 
-.inner_div {
+.comment {
     background-color: #9999FF;
     max-height:500px;
     max-width:500px;
